gccida/c3/queue_and_dump_index
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/queue_and_dump_index/src/tree-dump.c:585:24: error: use of undeclared identifier 'asc_737CC5'
fprintf( di_0->stream, asc_737CC5, 25LL, 6657907LL); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/queue_and_dump_index/src/tree-dump.c:624:24: error: use of undeclared identifier 'off_737CC6'
fprintf( di_0->stream, off_737CC6, v15, 6657907LL); 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/queue_and_dump_index/src/obj/tree-dump.o] Error 1
